Fix issue with elements placement on smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,6 @@ body{
 main{
     display: flex;
     overflow: hidden;
-    width: 100vh;
-    height: 100vh;
 }
 .main-area{
     display: flex;
